--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title></title>
-    <script src="http://localhost:8089/socket.io/socket.io.js" type="text/javascript"></script>
+    <!--<script src="http://localhost:8089/socket.io/socket.io.js" type="text/javascript"></script>-->
     <script src="jquery.js"></script>
     <script src="jquery-ui/ui/jquery.ui.core.js"></script>
     <script src="jquery-ui/ui/jquery.ui.widget.js"></script>
